--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,7 @@ first_name: Jonas
 middle_name: 
 last_name: Kaufmann
 email: jkaufman@mpi-sws.org
-description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+description:
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 keywords: # add your own keywords or leave empty
