--- a/_config.yml
+++ b/_config.yml
@@ -164,7 +164,7 @@ collections:
     output: false
     permalink: /news/:path/
   projects:
-    output: false
+    output: true
     permalink: /projects/:path/
 
 announcements:
